fix for code warnings